--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,11 @@ body {
   overflow: auto;
 }
 
+canvas {
+  position: fixed;
+  z-index: -1;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
