--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Sarpanch:900");
 
 body {
   margin: 0;
